templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: abhishek-pod
spec:
  containers:
    - name: ghee
      image: abhishekjoshhi/ghee
      ports:
        - containerPort: 5656
