templates/deployment1.yaml
apiVersion : apps/v1
kind : Deployment
metadata:
  name : abhishek-deployment1
  labels:
    first: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name : nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          
---
apiVersion: v1
kind: Service

metadata:
  name: ghee-service1

spec:
  selector:
    app: web

  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5656

type: LoadBalancer
